<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_size__1"
    tools:context=".Main_Home">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:textColor="#3A4A74"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039">


    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:textColor="#3A4A74"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077">


    </TextView>


    <ImageView
        android:id="@+id/test"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="ContentDescription">


    </ImageView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="340sp"
        android:layout_height="180dp"
        app:cardBackgroundColor="#E7E7E7"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="35dp"
            android:text="Start learning!"
            android:textColor="#3A4A74"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="80dp"
            android:text="Complete the lessons"
            android:textColor="#3A4A74"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="181dp"
            android:layout_marginLeft="181dp"
            android:layout_marginTop="105dp"
            android:text="Reach 100%"
            android:textColor="#3A4A74"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077"
            tools:ignore="HardcodedText" />

        <Button
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/circle"
            android:text="0%"
            android:textColor="#3A4A74"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText">


        </Button>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lessons"
        android:textColor="#3A4A74"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText">


    </TextView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="303dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="290dp"
                android:layout_marginLeft="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.139"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.902"
                android:layout_marginStart="20dp">


                <ImageView
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/img_x"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="105dp"
                    android:text="@string/t4"
                    android:textColor="#3A4A74"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.077" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="150dp"
                    android:text="You complete 0%"
                    android:textColor="#3A4A74"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.077"
                    tools:ignore="HardcodedText" />


                <Button
                    android:id="@+id/reading_btn"
                    android:layout_width="130dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="220dp"
                    android:background="@drawable/btn_design_full_done"
                    android:text="@string/start"
                    android:textColor="#FF3A4A74"
                    android:textSize="12sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="190dp"
                    android:background="@drawable/design_t" />

                <Button
                    android:layout_width="30dp"
                    android:layout_height="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="190dp"
                    android:background="@drawable/btn_design"
                    android:layout_marginEnd="30dp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="290dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.139"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.902">


                <ImageView
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/img_xi"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="105dp"
                    android:text="@string/listening"
                    android:textColor="#3A4A74"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.077" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="150dp"
                    android:text="You complete 0%"
                    android:textColor="#3A4A74"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.077"
                    tools:ignore="HardcodedText" />


                <Button
                    android:id="@+id/Listening_btn"
                    android:layout_width="130dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="220dp"
                    android:background="@drawable/btn_design_full_done"
                    android:text="@string/start"
                    android:textSize="12sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="190dp"
                    android:background="@drawable/design_t" />

                <Button
                    android:layout_width="15dp"
                    android:layout_height="10dp"
                    android:layout_marginRight="37dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="190dp"
                    android:background="@drawable/btn_design"
                    android:layout_marginEnd="37dp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="290dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.139"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.902">


                <ImageView
                    android:layout_width="57dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/img_xii"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="105dp"
                    android:text="Grammar"
                    android:textColor="#3A4A74"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.077"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="150dp"
                    android:text="You complete 0%"
                    android:textColor="#3A4A74"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.077"
                    tools:ignore="HardcodedText" />


                <Button
                    android:id="@+id/grammar_btn"
                    android:layout_width="130dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="220dp"
                    android:background="@drawable/btn_design"
                    android:text="@string/start"
                    android:textSize="12sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="190dp"
                    android:background="@drawable/design_t" />

                <Button
                    android:layout_width="15dp"
                    android:layout_height="10dp"
                    android:layout_marginRight="37dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="190dp"
                    android:background="@drawable/btn_design"
                    android:layout_marginEnd="37dp" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

